--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ Flask-SQLAlchemy==2.1
 Flask-WTF==0.14.2
 requests==2.11.1
 WTForms==2.1
-gunicorn==18.0
-psycopg2==2.5.1
+gunicorn==19.6.0
+psycopg2==2.6.1
+requests==2.10.0
